ast/src/snapshots/ast__parser__tests__class_snapshots@invalid_name.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"class 1A {}\")"
---
ExpectedClassName {
    source: NamedSource {
        name: "<test>",
        content: "class 1A {}",
    },
    range: 6..7,
}
