ast/src/snapshots/ast__parser__tests__conditional_snapshots@equality_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"if a == 1 { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Expression(
                        If(
                            IfCondition {
                                cases: [],
                                location: Location(
                                    20..33,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..35,
                ),
            },
            location: Location(
                0..35,
            ),
        },
    ),
]
